--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,11 +1,3 @@
-/* body {
-    position: relative;
-    padding-top: calc(50vh - 23vw);
-    background-image: -webkit-linear-gradient(top left, #34be5b 0%, #E95420 100%);
-    background-image: linear-gradient(to bottom right, #34be5b 0%, #E95420 100%);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-} */
 .calculator {
     text-align: center;
     margin: 0 auto;
@@ -23,7 +15,7 @@
     border-radius: 0 !important;
     color: #E95420;
     text-align: right;
-    font-size: 2.5em;
+    font-size: 250%;
     padding: 0 20px;
     box-sizing: border-box;
 }
@@ -61,7 +53,7 @@ button:hover {
 }
 
 button:active {
-    color: #34be5b !important;
+    color: #BE3497 !important;
     background-color: #292f36;
 }
 
@@ -75,25 +67,36 @@ button:active {
 }
 
 .operator:active, .percentage:active, .delete:active, .all-clear:active, .equal-sign:active {
-    color: #C34113 !important;
+    color: #1395C3 !important;
     background-color: #292f36;
 }
 
 /* MEDIA QUERY TABLET */
 @media (min-width: 768px) and (max-width: 1024px) {
-    .button {
-        font-size: 16px !important;
+    .calculator {
+        text-align: center;
+        margin: 0 auto;
+        padding: 25px;
+        width: 50%;
+    }
+    .calculator-screen {
+        height: 20vh;
+        max-height: 20vh;
+    }
+
+    .calculator-keys {
+        height: 100% !important;
+        max-height: 80vh;
     }
 }
 
 /* MEDIA QUERY SMART PHONE */
 @media (max-width: 768px) {
-    body {
-        padding: 0;
-    }
-
     .calculator {
-        padding: 0 !important;
+        text-align: center;
+        margin: 0 auto;
+        padding: 25px;
+        width: 60%;
     }
 
     .calculator-screen {
