--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,7 +13,7 @@
     border: solid #1c2128;
     border-width: 0 0 10px;
     border-radius: 0 !important;
-    color: #E95420;
+    color: #DC143C;
     text-align: right;
     font-size: 250%;
     padding: 0 20px;
@@ -42,32 +42,46 @@ button {
     background-color: #292f36;
     border: 1px solid transparent;
     font-size: 32px;
-    color: #34be5b;
+    color: #0000ff;
     width: 25%;
     outline: none;
 }
 
 button:hover {
-    color: #55D078 !important;
+    color: #7777ff;
     background-color: #3F4853;
 }
 
 button:active {
-    color: #BE3497 !important;
+    color: #0000ff;
     background-color: #292f36;
 }
 
-.operator, .percentage, .delete, .all-clear, .equal-sign {
-    color: #C34113;
+.operator, .percentage, .equal-sign {
+    color: #00ff00;
 }
 
-.operator:hover, .percentage:hover, .delete:hover, .all-clear:hover, .equal-sign:hover {
-    color: #E95420 !important;
+.operator:hover, .percentage:hover, .equal-sign:hover {
+    color: #aaffaa !important;
     background-color: #3F4853;
 }
 
-.operator:active, .percentage:active, .delete:active, .all-clear:active, .equal-sign:active {
+.operator:active, .percentage:active, .equal-sign:active {
     color: #1395C3 !important;
+    background-color: #292f36;
+}
+
+.delete, .all-clear {
+    color: #ff0000;
+}
+
+.delete:hover, .all-clear:hover {
+    color: #00bfff;
+    background-color: #ff3333;
+}
+
+.delete:active, .all-clear:active {
+    color: #ff0000;
     background-color: #292f36;
 }
 
